@@ -1,7 +1,7 @@
 #!/bin/sh
 MAJOR=2
-MINOR=3
-REV=4
+MINOR=6
+REV=5-b2
 sh -c "svnversion -n . | cut -d: -f2 | cut -dS -f1 | tr -d '\n'" > ./SVN_VERSION
 SVN_VERSION=`cat ./SVN_VERSION`
 VERSION="$MAJOR.$MINOR.$REV-svn$SVN_VERSION"
